fix: wrap request/response logs

--- a/src/app/playground/home/home.component.css
+++ b/src/app/playground/home/home.component.css
@@ -107,12 +107,9 @@ section {
   top: 130px;
 }
 
-.routes-logs code {
+.routes-logs span {
   display: block;
-}
-
-.routes-logs pre {
-  margin: 0;
+  font-family: monospace;
 }
 
 .upload-indicator {
